Bug 168548 - CRASH: launching hyperlink dialog with horizontal tabs (gen)
Summary: CRASH: launching hyperlink dialog with horizontal tabs (gen)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
26.2.0.0 alpha0+ master
Hardware: All All
: high major
Assignee: Heiko Tietze
URL:
Whiteboard: target:26.2.0 target:26.8.0
Keywords: bibisected, bisected, haveBacktrace, regression
Depends on:
Blocks: Hyperlink-Dialog Vertical-Tab-dialogs
  Show dependency treegraph
 
Reported: 2025-09-25 15:32 UTC by Xisco Faulí
Modified: 2026-02-10 13:51 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
bt (17.88 KB, text/plain)
2025-09-25 16:34 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2025-09-25 15:32:42 UTC
Steps to reproduce:
1. Launch SAL_USE_VCLPLUGIN=gen instdir/program/soffice
2. Tools - Options - Appearance - Horizontal tabs -> Apply
3. Insert - Hyperlink

-> Crash

Reproduced in

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 81321560f2151ee12be26135aed65968287d1c94
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: x11
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2025-09-25 15:33:15 UTC
The issue started to happen after

commit fc741371fa283036cdbd12be59c769c7cac39437	[log]
author	Heiko Tietze <tietze.heiko@gmail.com>	Wed Jul 09 13:00:23 2025 +0200
committer	Heiko Tietze <heiko.tietze@documentfoundation.org>	Wed Jul 09 15:52:08 2025 +0200
tree b634bdbbefeb2a5a6ef47974580598f00d162d0b
parent 0ab2da12fb6ea515339b113f622720b11c65afca [diff]

Resolves tdf#167108 - Option to use horizontal tabs instead vertical
Comment 2 Julien Nabet 2025-09-25 16:34:59 UTC
Created attachment 202966 [details]
bt

On pc Debian x86-64 with master sources updated today + gen rendering, I could reproduce this.
Comment 3 V Stuart Foote 2025-09-25 17:26:06 UTC
Same with the Windows builds

Hyperlink with Appearance in Vertical at Side tabs is fine, change to Horizontal on Top, and it will crash on Insert of Hyperlink.  

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 6f68c46d0aa5fe872de0dec8777d35ff91886043
CPU threads: 28; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded
Comment 4 Heiko Tietze 2025-09-26 08:11:29 UTC
This can be solved with bug 147630 by making the the dialog a true tabbed dialog (right now it implements its own solution) or by hacking a condition "if not hyperlink dialog" to the method of tab creation at the VT=false option.
Comment 5 Heiko Tietze 2025-09-26 10:52:27 UTC
(In reply to Heiko Tietze from comment #4)
> ... hacking a condition "if not hyperlink dialog"

Kind of in https://gerrit.libreoffice.org/c/core/+/191541
Comment 6 Commit Notification 2025-09-26 12:35:01 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ba03709243100b70c9f2fca315c0252e5f03ca0e

Resolves tdf#168548 - Always use vertical tabs for the hyperlink dialog

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Xisco Faulí 2025-09-29 11:18:56 UTC
(In reply to Heiko Tietze from comment #4)
> This can be solved with bug 147630 by making the the dialog a true tabbed
> dialog (right now it implements its own solution) or by hacking a condition
> "if not hyperlink dialog" to the method of tab creation at the VT=false
> option.

Hi Heiko,
Do you have some code-pointers that could be added to bug 147630 ?
Comment 8 Heiko Tietze 2025-09-29 12:05:37 UTC
(In reply to Xisco Faulí from comment #7)
> Do you have some code-pointers that could be added to bug 147630 ?

Submitted an Outreachy project for that https://www.outreachy.org/outreachy-december-2025-internship-cohort/communities/libreoffice/#transform-the-existing-hyperlink-dialog-into-a-sta. First code pointer at https://gerrit.libreoffice.org/c/core/+/191538
Comment 9 Henry Hawkins 2025-11-03 01:39:37 UTC Comment hidden (spam)
Comment 10 Heiko Tietze 2025-11-03 09:56:21 UTC Comment hidden (obsolete)
Comment 11 Julien Nabet 2025-11-03 10:22:47 UTC
On pc Debian x86-64 with master sources updated today, I confirm I don't reproduce the bug anymore.

Thank you Heiko!
Comment 12 V Stuart Foote 2025-11-03 13:03:27 UTC
Verified fixed. Win builds TB103 nightly for 2025-10-27 

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 620(Build:0)
CPU threads: 28; OS: Windows 11 X86_64 (build 26200); UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded
Comment 13 siddhi 2025-12-08 01:31:34 UTC
Hello Everyone, I would be working on this

https://gerrit.libreoffice.org/c/core/+/195201
Comment 14 Heiko Tietze 2025-12-08 09:59:08 UTC
(In reply to siddhi from comment #13)
> Hello Everyone, I would be working on this
> 
> https://gerrit.libreoffice.org/c/core/+/195201

Rather bug 147630 :-)
Comment 15 Commit Notification 2026-02-10 13:51:24 UTC
siddhisalunkhe1998 committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/42ee19baf9f1522fa1e0e51eb14d30f0e4eb12d3

tdf#168548 Add UITest for hyperlink dialog with horizontal tabs

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.