Resolves tdf#168548 - Always use vertical tabs for the hyperlink dialog

Dirty hack until the dialog is turned into a true SfxTabDialog

Change-Id: Ia22e6b91db78f1b603d6403d5458e7384eb2b976
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/191541
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>